@@ -58,6 +58,8 @@ Common.StopwatchPanel.reset=Reset
 
 #About Dialog
 Common.About.Version       =Version:
+Common.About.BuildDate     =Build Date:
+Common.About.Distribution  =Distribution:
 Common.About.JavaVersion   =Java Version:
 Common.About.OSVersion     =OS Version:
 Common.About.LicenseButton=License...
