@@ -1,3 +1,5 @@
+2-2-09: #1145, add support for version.timestamp, stored in project properties file, displayed in About dialog
+2-2-09: #1086, add support for distribution.tag, stored in project properties file, displayed in About dialog
 2-2-09: #1130, rewrite SessionsCounter, add sim_sessions_since support
 1-28-09: #1087, add detection of phet dev, phet prod, other website to deployment scenarios
 1-28-09: #1087, add additional FileUtils, fix getCodeSource
